# simple-component-command

./: Cargo.toml
src/: main.rs
