[package]
name = "simple-component-command"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
target = { path = "../preview2-prototyping/wit", world = "command" }

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { version = "0.4.0", default_features = false }
